--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <script>
-  location.replace("https://sonvnguyen.github.io/copro/")
+  location.replace("https://sonvnguyen.github.io/copro/");
 </script>
 
 </body>
